--- a/firedb/build.gradle
+++ b/firedb/build.gradle
@@ -12,7 +12,7 @@ plugins {
     id 'maven-publish'
 }
 
-group 'com.pravisht.firedb'
+group 'com.github.yadavanuj.firedb'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -50,7 +50,7 @@ java {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'com.pravisht.firedb'
+            groupId = 'com.github.yadavanuj.firedb'
             artifactId = 'firedb'
             version = '1.0-SNAPSHOT'
 
